@@ -146,6 +146,7 @@ Cacti CHANGELOG
 -issue#5884: Fix Fortigate and Aruba OSCX switch template, improve Clearpass template
 -issue#5932: When upgrading Cacti, the replicate_out() process runs repeatedly
 -feature#5921: Add HPE Nimble/Alletra template
+-feature#5933: Only attempt to change the table type and character encoding for built-in Cacti tables
 
 1.2.28
 -security#GHSA-49f2-hwx9-qffr: XSS vulnerability when creating external links with the consolenewsection parameter
